# aiidalab-uc3

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_SSH  LICENSE  README.md  __init__.py  example.ipynb  index.ipynb  install_uc3.ipynb  openapi.yml  requirements.txt  setup.cfg  setup.py  setup_droplet.sh  setup_unity.sh  ssh_computer_code_setup.md  ssh_computer_code_setup.txt  start.py  uc3.ipynb  uc3_ap2.ipynb  uc3_ap3.ipynb
setup_files/droplet/: code_setup.yml  computer_configure.yml  computer_setup.yml
setup_files/local/: code_setup.yml  computer_configure.yml  computer_setup.yml
setup_files/unity/: code_setup.yml  computer_configure.yml  computer_setup.yml
setup_files/unity2/: code_setup.yml  computer_configure.yml  computer_setup.yml
sshfiles/: config  known_hosts
uc3/: base_widgets_mod.py  logger.py  steps.py
