[aiidalab]
title = Use Case 3

[metadata]
name = aiidalab-mp-uc3
version = 0.1-alpha
author = SINTEF
author_email = TEAM4.0@SINTEF.no
description = "App for the MarketPlace Project's use case 3."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.cc-asp.fraunhofer.de/MarketPlace/apps/uc3-aiidalab
project_urls =
    # Logo = https://gitlab.cc-asp.fraunhofer.de/MarketPlace/apps/uc3-aiidalab/-/raw/65702f86b7d1d7573a92d13a786f1fbb90290a4c/img/logo.png?inline=false
    Documentation = https://gitlab.cc-asp.fraunhofer.de/MarketPlace/apps/uc3-aiidalab/-/blob/main/README.md
    Bug Tracker = https://gitlab.cc-asp.fraunhofer.de/MarketPlace/apps/uc3-aiidalab/-/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiidalab>=21.09.0

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
