[aiidalab]
title = MarketPlace - Use Case 3

[metadata]
name = aiidalab-mp-uc3
version = 0.5.0
author = SINTEF
author_email = TEAM4.0@SINTEF.no
description = "App for the MarketPlace Project's Use Case 3."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daniel-sintef/aiidalab-uc3
project_urls =
    Logo = https://www.materials-marketplace.eu/assets/img/logo.svg
    Documentation = https://github.com/daniel-sintef/aiidalab-uc3/-/blob/main/README.md
    Bug Tracker = https://github.com/daniel-sintef/aiidalab-uc3/-/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aiida-core~=2.1,<3
    aiidalab>=21.09.0
    aiidalab-widgets-base==2.0.0b1

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.
